--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -58,5 +58,9 @@
   <%= f.label :description %>
   <%= f.text_field :description, class:"form-control" %>
 </div>
+<!-- <div>
+  <%# f.label :menu_item %>
+  <%# f.text_field :menu_items, class:"form-control" %>
+</div> -->
 <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
