--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,132 @@
  *= require_tree .
  *= require_self
  */
+
+.logo {
+  width: 200px;
+}
+
+body {
+   padding-bottom: 20px;
+   font-family: 'Roboto', sans-serif;
+   margin-bottom: 60px;
+ }
+
+ .navbar-default {
+   background-color: #ff5722;
+   border: 0;
+   font-family: 'Roboto Condensed', sans-serif;
+   font-size: 1em;
+ }
+
+ .navbar-default a {
+   color: #000;
+ }
+
+ .navbar-default a:hover {
+   color: #fff;
+   background-color: #000;
+ }
+
+ .navbar-default a:active {
+   color: #fff;
+   background-color: #000;
+ }
+
+ .navbar-brand {
+   margin-top: 5px;
+   vertical-align: middle;
+ }
+
+ /*.footer.navbar-brand {
+   margin-top: 0px;
+   vertical-align: middle;
+ }*/
+
+ a {
+   &.navbar-brand {
+     padding: 25px 15px;
+     line-height: 25px;
+   }
+ }
+
+ .navbar {
+   margin-bottom: 0;
+ }
+
+ .nav > li > a {
+   padding: 5px 8px;
+   margin: 20px 10px;
+ }
+
+ .nav > li > a {
+   border-radius: 10px;
+ }
+
+ .nav > li > a:hover {
+   background-color: #000;
+   color: #fff;
+ }
+
+ .nav > li > a:active {
+   background-color: #000;
+   color: #fff;
+ }
+
+ .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+   background-color: #000;
+   color: #fff;
+ }
+
+ .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover{
+   color: #fff;
+   background-color: #000;
+ }
+
+ .navbar-default .navbar-nav > li > a {
+   color: #000;
+ }
+
+ #copyright p {
+   float: right;
+   color: #000;
+   margin: 25px 15px;
+ }
+
+
+ h1 {
+   font-family: 'Open Sans', sans-serif;
+   color: #ff5722;
+   font-weight: 300;
+ }
+
+ h4 {
+   font-weight:700;
+   color: #333333;
+ }
+
+ html {
+  position: relative;
+  min-height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 70px;
+  background-color: #ff5722;
+  /*opacity: 0.5;*/
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.footer > li > a {
+  font-size: 1.3em;
+  font-weight:300;
+  color: white;
+}
