--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,28 +6,90 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
   </head>
-  <div id="navbar" class="navbar-collapse collapse">
-    <ul class=" nav navbar-nav navbar-right">
-    <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "About", about_path %></li>
-    <li><%= link_to "Shops", users_path %></li>
-    <li><%= link_to "Contact", new_contact_path %></li>
-    <!-- <li><%# link_to "Sign up", new_user_path %></li> -->
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav nav-pills">
+          <li><%= link_to "Bakers", users_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Contact", new_contact_path %></li>
+
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="user_drop_down" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <% if user_signed_in? %>
+                <%= current_user.first_name %>
+              <% else %>
+                Sign in
+              <% end %>
+              <span class="caret"></span>
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="user_drop_down">
+              <% if user_signed_in? %>
+                <li><%= link_to "Add Menu Item", new_user_menu_item_path(current_user) %></li>
+                <li><%= link_to "Profile", root_path %></li>
+                <li><%= link_to "Sign out", sessions_path, method: :delete %></li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_path %></li>
+                <li><%= link_to "Sign in", new_session_path %></li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <!-- <ul class=" nav navbar-nav navbar-right">
+    <li><%# link_to "Home", root_path %></li>
+    <li><%# link_to "About", about_path %></li>
+    <li><%# link_to "Shops", users_path %></li>
+    <li><%# link_to "Contact", new_contact_path %></li>
+    <li><%# link_to "Add Menu Item", new_menu_item_path %></li>
       <% if user_signed_in? %>
-      <li><a>Welcome <%= current_user.first_name %></a></li>
-      <li><%= link_to "sign out", sessions_path, method: :delete %></li>
+      <li><a>Welcome <%# current_user.first_name %></a></li>
+      <li><%# link_to "sign out", sessions_path, method: :delete %></li>
       <% else %>
-      <li><%= link_to "Sign Up", new_user_path %></li>
-      <li><%= link_to "Sign In", new_session_path %></li>
+      <li><%# link_to "Sign Up", new_user_path %></li>
+      <li><%# link_to "Sign In", new_session_path %></li>
       <% end %>
     </ul>
   </div>
 </div>
-</nav>
+</nav> -->
 <div class="flash-message">
   <%= flash[:notice] || flash[:alert] %>
 </div>
+
+<div class="footer">
+        <div class="container">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#" style="padding: 25px 0px;"><%= image_tag "neighborfood-logo.png", class: "logo"%></a>
+          </div>
+            <div id="copyright">
+              <p>© 2016 neighborFood</p>
+              <!-- <ul class="nav navbar-nav navbar-right">
+                <li style="color: #fff; margin: 25px 15px;">© 2016 Awesome Answers</li>
+
+              </ul>-->
+            </div>
+
+        </div>
+        </div>
+      </div>
 
   <body>
     <%= yield %>
