--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,12 +77,7 @@ body {
    border-radius: 10px;
  }
 
- .nav > li > a:hover {
-   background-color: #000;
-   color: #fff;
- }
-
- .nav > li > a:active {
+ .navbar-default .navbar-nav > li > a:hover {
    background-color: #000;
    color: #fff;
  }
