--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="#"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav nav-pills">
+        <ul class="nav navbar-nav nav-pills">
           <li><%= link_to "Bakers", users_path %></li>
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Home", root_path %></li>
@@ -41,7 +41,7 @@
             <ul class="dropdown-menu" aria-labelledby="user_drop_down">
               <% if user_signed_in? %>
                 <li><%= link_to "Add Menu Item", new_user_menu_item_path(current_user) %></li>
-                <li><%= link_to "Profile", root_path %></li>
+                <li><%= link_to "Account", edit_user_path(current_user)%></li>
                 <li><%= link_to "Sign out", sessions_path, method: :delete %></li>
               <% else %>
                 <li><%= link_to "Sign up", new_user_path %></li>
