--- a/app/views/menu_items/new.html.erb
+++ b/app/views/menu_items/new.html.erb
@@ -1,24 +1,16 @@
-<h1>Your Shop</h1>
-<%= @user.errors.full_messages.join(", ") %>
-<%= form_for @user do |f| %>
-<div>
-  <%= f.label :shop_name %>
-  <%= f.text_field :shop_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :description %>
-  <%= f.text_field :description, class:"form-control" %>
-</div>
-<%= f.submit %>
-<% end %>
+<h1>Add food to your shop</h1>
+<div id="menu_items">
 
-
-<h3>Add food to your shop</h3>
-<%= @menu_item.errors.full_messages.join(", ") %>
-<%= form_for @menu_item do |food| %>
-<div>
-  <%= food.label :menu_item %>
-  <%= food.text_field :menu_items, class:"form-control" %>
+  <%= @menu_item.errors.full_messages.join(", ") %>
+  <%= form_for [@user, @menu_item] do |food| %>
+  <div>
+    <%= food.label :food_name %>
+    <%= food.text_field :food_name, class:"form-control" %>
+  </div>
+  <div>
+    <%= food.label :price %>
+    <%= food.text_field :price, class:"form-control" %>
+  </div>
+  <%= food.submit %>
+  <% end %>
 </div>
-<%= food.submit %>
-<% end %>
