added gmaps, bootstrap tabs, javascript search form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -49,6 +49,10 @@
   <%= f.label :telephone %>
   <%= f.text_field :telephone, class:"form-control" %>
 </div>
+<div>
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar, class:"form-control" %>
+</div>
 <hr />
 <p>
   Once you have a shop name, it will be available to show on the listing page.
