--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require_tree .
  *= require_self
  */
+@import "font-awesome";
 
 .logo {
   width: 200px;
@@ -25,6 +26,39 @@ body {
    font-family: 'Roboto', sans-serif;
    margin-bottom: 60px;
  }
+
+ #search-wrapper {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: -10;
+  transition: top 0.3s;
+}
+
+#search-bar {
+   background-color: #4169ac;
+   border: none;
+   border-radius: 0px;
+   opacity: 0.95;
+   font-color: white;
+   height: 50px;
+   z-index: -1;
+}
+
+
+#search-bar::-webkit-input-placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+#search-wrapper input[type='text']:focus {
+  color: white;
+}
+
+.moved {
+  top: 70px !important;
+}
 
  .navbar-default {
    background-color: #ff5722;
@@ -59,7 +93,7 @@ body {
 
  a {
    &.navbar-brand {
-     padding: 25px 15px;
+     padding: 0px 15px;
      line-height: 25px;
    }
  }
@@ -124,7 +158,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 70px;
+  height: 75px;
   background-color: #ff5722;
   /*opacity: 0.5;*/
 }
