--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,17 +17,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
+        <a class="navbar-brand" href="/"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills">
           <li><%= link_to "Bakers", users_path %></li>
           <li><%= link_to "About", about_path %></li>
-          <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Contact", new_contact_path %></li>
-
         </ul>
         <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to fa_icon('shopping-cart lg'), edit_cart_path %></li>
           <li class="dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="user_drop_down" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <% if user_signed_in? %>
@@ -49,6 +48,15 @@
               <% end %>
             </ul>
           </li>
+          <li class="game-search">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search" aria-hidden="true" id="search"></span>
+              </a>
+              <form id="search-wrapper" action="/games" method="get">
+                <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
+              <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+            </form>
+          </li>
+          <!-- <li class="fa fa-search" aria-hidden="true"></li> -->
         </ul>
       </div>
     </div>
