--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,66 +1,102 @@
-<h1>Your Profile</h1>
-  <%= @user.errors.full_messages.join(", ") %>
-  <%= form_for @user do |f| %>
-<div>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :email %>
-  <%= f.email_field :email, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :password %>
-  <%= f.password_field :password, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :apartment_number %>
-  <%= f.text_field :apartment_number, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :street_number %>
-  <%= f.text_field :street_number, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :street %>
-  <%= f.text_field :street, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :city %>
-  <%= f.text_field :city, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :state %>
-  <%= f.text_field :state, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :country %>
-  <%= f.text_field :country, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :telephone %>
-  <%= f.text_field :telephone, class:"form-control" %>
-</div>
-<hr />
-<p>
-  Once you have a shop name, it will be available to show on the listing page.
-</p>
-<div>
-  <%= f.label :shop_name %>
-  <%= f.text_field :shop_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :description %>
-  <%= f.text_field :description, class:"form-control" %>
-</div>
+<div class="container">
+<ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" data-toggle="tab" href="#profile" role="tab">Profile</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#add_menu_item" role="tab">Add Menu Item</a>
+  </li>
+</ul>
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane fade in active" id="profile" role="tabpanel">
 
-<%= f.submit "Submit", class: "btn btn-primary" %>
-<% end %>
+    <h1>Your Profile</h1>
+      <%= @user.errors.full_messages.join(", ") %>
+      <%= form_for @user do |f| %>
+    <div>
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :email %>
+      <%= f.email_field :email, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :password %>
+      <%= f.password_field :password, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :apartment_number %>
+      <%= f.text_field :apartment_number, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :street_number %>
+      <%= f.text_field :street_number, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :street %>
+      <%= f.text_field :street, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :city %>
+      <%= f.text_field :city, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :state %>
+      <%= f.text_field :state, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :country %>
+      <%= f.text_field :country, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :telephone %>
+      <%= f.text_field :telephone, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class:"form-control" %>
+    </div>
+    <hr />
+    <p>
+      Once you have a shop name, it will be available to show on the listing page.
+    </p>
+    <div>
+      <%= f.label :shop_name %>
+      <%= f.text_field :shop_name, class:"form-control" %>
+    </div>
+    <div>
+      <%= f.label :description %>
+      <%= f.text_field :description, class:"form-control" %>
+    </div>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+  <div class="row ">
+    <div id="menu_items">
+      <% @user.menu_items.each do |items| %>
+      <%= render "/menu_items/show_items", items: items %>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="tab-pane fade in" id="add_menu_item" role="tabpanel">
+    <h2>Add Menu Item</h2>
+    <div class="row reports-in">
+        <div class="continer">
+          <%= render "add_menu_items"%>
+        </div>
+    </div>
+
+  </div>
+</div>
+</div>
