--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
+<script src="//maps.google.com/maps/api/js?v=3.23&key=AIzaSyDY_RtfOh4eOUbooRCQ7owonryU830hn4Q"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script>
+
 <h1>All bakers</h1>
 <div class="navbar-form">
 <%= form_tag users_path, :method => 'get' do %>
@@ -13,8 +17,10 @@
   <p><%= u.full_address %></p>
   <p><%= u.first_name %></p>
   <p><%= u.last_name %></p>
+
+  <button id="add-maps" type="submit">show map</button>
   <hr>
   <% end %>
 </div>
-
+<%= render "maps", u: u %>
 <%= paginate @users %>
