--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,20 @@
 <div class="container">
 <h2><%= @user.shop_name %></h2>
+<% if @user.avatar.present? %>
+<%= image_tag @user.avatar.url(:thumb), class: "img-thumbnail"  %>
+<% else %>
+<div class="img-thumbnail">
+  <%= display_avatar @user%>
+</div>
+<% end %>
 <%= @user.full_address %>
 <div>
 <% @user.menu_items.each do |m| %>
 <%= m.food_name %>
 <br />
 <%= m.price %>
-<%= m.number_field :quantity, value: order_item.quantity.to_i, class: "form-control", min: 1 %>
-<%# m.submit "Buy", class: "btn btn-primary"  %>
+<%# m.text_area %>
+<%= link_to 'Add to cart', add_cart_path({id: m.id}), method: :patch, class: 'btn btn-primary' %>
 <% end %>
 <hr>
 </div>
@@ -27,7 +34,18 @@
 <div>
   <% @user.reviews.each do |review| %>
   <%= review.body %>
+  <% if can? :like, review %>
+<% user_like = review.like_for current_user %>
+
+<% if user_like.present? %>
+<%= link_to "Un-Like", review_like_path(@user, review), method: :delete %>
+<% else %>
+<%= link_to "Like", user_review_likes_path(@user, :review, review ), method: :post %>
+<% end %>
+Like (<%= pluralize @review.likes.count, "like" %>)
+
   <hr />
+  <% end %>
   <% end %>
 </div>
 </div>
