--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,95 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.text-header {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 1.5em;
+  line-height: 1.7em;
+  padding: 0em 2em;
+}
+
+.grey-row {
+  background-color: #FAF9F0;
+  width: 100%;
+  padding: 4.6em 1em;
+}
+
+#my-jumbotron {
+  padding: 0em 0em;
+}
+
+.header-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.border {
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
+}
+
+.feature-box {
+  border: 1px grey solid;
+  width: 280px;
+  height: 300px;
+  border-radius: 3px;
+  display: inline-block;
+  // box-shadow: 0 0 7px 0 #DDD;
+  margin: 10px;
+}
+
+.add-padding-to-feature {
+  margin: auto;
+  padding: 4em 0em;
+}
+
+.add-margin {
+  margin-bottom: 1em;
+}
+
+#icon1 {
+  margin-bottom: 15px;
+  background-position: center;
+  height: 100px;
+  background-image: url('icon1.png');
+  background-repeat: no-repeat;
+}
+
+#icon2 {
+  margin-bottom: 15px;
+  background-position: center;
+  height: 100px;
+  background-image: url('icon2.png');
+  background-repeat: no-repeat;
+}
+
+#icon3 {
+  margin-bottom: 15px;
+  background-position: center;
+  height: 100px;
+  background-image: url('icon3.png');
+  background-repeat: no-repeat;
+}
+
+#landscape {
+  margin-bottom: 20px;
+  background-position: center;
+  height: 133px;
+  background-image: url('landscape.png');
+  background-repeat: no-repeat;
+}
+
+.rounded {
+  display: block;
+  margin: auto;
+  width: 220px;
+  border-radius: 150px;
+  padding-top: 15px;
+}
+
+.feature-cooks {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
