--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,70 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-margin-div{
+  margin-top: 8em;
+  margin-bottom: 8em;
+}
+
+.user-container {
+  position: relative;
+  top: 28px;
+}
+.user-container li {
+  width: 100%;
+  padding: 20px;
+  background-color: #FAF9F0;
+  margin: 18px 0px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.user-container li a {
+  color: #333;
+}
+
+// .user-container li:hover {
+//   background-color: #EDEBCA;
+//   // box-shadow: 0px 2px 2px 0px rgba(34,34,34,0.70);
+//   // transition: 0.2s ease-in-out 0.2s;
+//
+// }
+
+.user-container ul {
+  list-style: none;
+  padding: 0px;
+  position: relative;
+}
+
+.map-size {
+  width: 100%;
+  height: 300px;
+}
+
+.shop-image {
+  background-color: #7E2553;
+  width: 100%;
+  height: 300px;
+}
+
+.shop-info {
+  background-color: #FAF9F0;
+  width: 100%;
+  height: 80px;
+}
+
+.img-thumbnail {
+  border-radius: 100px;
+  width: 50px;
+  display: inline-block;
+}
+
+.menu {
+  background-color: #FAF9F0;
+  width: 100%;
+  width: 100%;
+  padding: 18px;
+  margin: 3em 0em;
+  border-radius: 5px;
+}
