--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,63 @@
-<h1>Welcome to Food App</h1>
-<% @user.each do |user| %>
-<ul>
-<%= link_to user_path(user) do %>
-<li>
-  <h4><%= user.first_name %></h4>
-</li>
-<% end %>
-<% end %>
-</ul>
+<div id="my-jumbotron">
+  <!-- <h1>Welcome to Food App</h1> -->
+  <%= image_tag "cupcakes", class: "header-image" %>
+</div>
+<div class="grey-row">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4 text-header">
+      <div id="icon1"></div>
+      <p>A dedicated platform to celebrate home cooks</p>
+    </div>
+    <div class="col-sm-4 text-header border">
+      <div id="icon2"></div>
+      <p>Connect with your neighbors, relieve your hunger</p>
+    </div>
+    <div class="col-sm-4 text-header">
+      <div id="icon3"></div>
+      <p>Made to help you showcase and monetize your talents</p>
+    </div>
+  </div>
+</div>
+</div>
+<div class="container add-padding-to-feature">
+  <h1 align="center" class="add-margin">Check out the food available now</h1>
+  <div class="row">
+    <% @menu_item[0...4].each do |menu| %>
+    <div class="col-sm-3 feature-box">
+        <%= link_to user_path(menu) do %>
+          <h4><%= menu.food_name %></h4>
+        <% end %>
+    </div>
+    <% end %>
+
+  </div>
+</div>
+
+<div class="grey-row">
+<div class="container">
+  <div class="row">
+    <div class="text-header">
+      <div id="landscape">
+      </div>
+      <p>NeighborFood provides easy to use interface so you can manage your menu and sales with ease!</p>
+      <p>Making food has never been this rewarding!</p>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="container add-padding-to-feature">
+  <h1 align="center" class="add-margin">Meet the new members of NeighborFood</h1>
+  <div class="row">
+    <% @user[0...4].each do |user| %>
+    <div class="col-sm-3">
+        <%= link_to user_path(user) do %>
+          <%= image_tag user.avatar, class: "rounded" %>
+          <h4 align="center" class="feature-cooks"><%= user.shop_name %></h4>
+        <% end %>
+    </div>
+    <% end %>
+
+  </div>
+</div>
