--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
   </head>
-  <nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container" id="nav-wrapper">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only"></span>
@@ -39,28 +39,30 @@
 
             <ul class="dropdown-menu" aria-labelledby="user_drop_down">
               <% if user_signed_in? %>
-                <li><%= link_to "Add Menu Item", new_user_menu_item_path(current_user) %></li>
                 <li><%= link_to "Account", edit_user_path(current_user)%></li>
                 <li><%= link_to "Sign out", sessions_path, method: :delete %></li>
               <% else %>
                 <li><%= link_to "Sign up", new_user_path %></li>
                 <li><%= link_to "Sign in", new_session_path %></li>
+
               <% end %>
             </ul>
           </li>
-          <li class="game-search">
+          <li class="food-search">
               <a href="" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-search" aria-hidden="true" id="search"></span>
               </a>
-              <form id="search-wrapper" action="/games" method="get">
-                <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for a game or a studio" id="search-bar">
-              <button type="submit" class="btn btn-default" style="display: none">Submit</button>
-            </form>
+
           </li>
           <!-- <li class="fa fa-search" aria-hidden="true"></li> -->
         </ul>
       </div>
     </div>
   </nav>
+
+  <form id="search-wrapper" action="/users" method="get">
+      <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for food" id="search-bar">
+    <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+  </form>
     <!-- <ul class=" nav navbar-nav navbar-right">
     <li><%# link_to "Home", root_path %></li>
     <li><%# link_to "About", about_path %></li>
