--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,13 @@
 <div id="my-jumbotron">
-  <!-- <h1>Welcome to Food App</h1> -->
-  <%= image_tag "cupcakes", class: "header-image" %>
+  <div id="header-pic">
+    <div id="black-box">
+      <!-- <div id = "divToShowHide" class = "BeforeScroll"> -->
+        <h1 align="center" id="header-text">Welcome to NeighborFood</h1>
+        <p class="header-p">Do you ever miss your mom’s home baked cookies? How about nana’s crumbly apple pie?
+        NeighborFood revolutionizes how home cooks can connect with you. It may not be mom’s, but you can be sure that it’s made with an extra tablespoon of love.</p>
+      <!-- </div> -->
+    </div>
+  </div>
 </div>
 <div class="grey-row">
 <div class="container">
