--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,10 +20,10 @@
   padding: 0em 0em;
 }
 
-.header-image {
-  max-width: 100%;
-  height: auto;
-}
+// .header-image {
+//   max-width: 100%;
+//   height: auto;
+// }
 
 .border {
   border-left: 1px solid #000;
@@ -43,10 +43,11 @@
 .add-padding-to-feature {
   margin: auto;
   padding: 4em 0em;
+  padding-bottom: 5em;
 }
 
 .add-margin {
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 }
 
 #icon1 {
@@ -85,11 +86,57 @@
   display: block;
   margin: auto;
   width: 220px;
-  border-radius: 150px;
-  padding-top: 15px;
+  border-radius: 200px;
 }
 
 .feature-cooks {
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+#header-pic {
+  background-image: url('cupcakes2.jpg');
+  background-size: cover;
+  height: 770px;
+}
+
+#header-text {
+  font-weight: 700;
+  padding-top: 200px;
+  font-size: 5em;
+  color: #fff;
+  text-shadow: 2px 2px rgba(0,0,0,0.6);
+}
+
+.header-p {
+  font-weight: 300;
+  text-align: center;
+  line-height: 1.8em;
+  color: #fff;
+  font-size: 1.7em;
+  margin-top: 30px;
+  text-shadow: 2px 2px rgba(0,0,0,0.6);
+}
+
+#black-box {
+  margin: 0 auto;
+  padding: 10%;
+  padding-top: 5%;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 770px;
+}
+
+.BeforeScroll
+{
+  height: 100px; /*Whatever you want*/
+  width: 100%; /*Whatever you want*/
+  display: none;
+}
+
+/*Use this class when you want your content to be shown after some scroll*/
+.AfterScroll
+{
+  height: 100px; /*Whatever you want*/
+  width: 100%; /*Whatever you want*/
+  display: block;
 }
