--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:300,400,700" rel="stylesheet">
   </head>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container" id="nav-wrapper">
@@ -60,9 +60,11 @@
   </nav>
 
   <form id="search-wrapper" action="/users" method="get">
-      <input type="text" name="search_main" class="form-control" name="search" placeholder="Search for food" id="search-bar">
-    <button type="submit" class="btn btn-default" style="display: none">Submit</button>
+      <input type="text" name="q[menu_items_food_name_cont]" class="form-control" name="search" placeholder="Search for food" id="search-bar">
+
+      <button type="submit" class="btn btn-default" style="display: none">Submit</button>
   </form>
+
     <!-- <ul class=" nav navbar-nav navbar-right">
     <li><%# link_to "Home", root_path %></li>
     <li><%# link_to "About", about_path %></li>
