--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,19 +31,33 @@
 }
 
 .feature-box {
-  border: 1px grey solid;
+  // border: 1px grey solid;
   width: 280px;
-  height: 300px;
+  height: 350px;
   border-radius: 3px;
   display: inline-block;
+  background-color: #FAF9F0;
   // box-shadow: 0 0 7px 0 #DDD;
   margin: 10px;
+  padding: 0;
+  overflow: hidden;
+}
+
+.add-margin-to-feature-food {
+  text-align: center;
+  margin-top: 1.2em;
 }
 
 .add-padding-to-feature {
   margin: auto;
   padding: 4em 0em;
   padding-bottom: 5em;
+}
+
+.height-feature-photo {
+  height: 280px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 .add-margin {
@@ -124,6 +138,23 @@
   padding-top: 5%;
   background-color: rgba(0, 0, 0, 0.6);
   height: 770px;
+}
+
+.user-index-picture {
+  padding: 4px;
+  background-color: #fff;
+  border: 1px solid #DDD;
+  border-radius: 3px;
+  display: inline;
+  width: 150px;
+  float: left;
+}
+
+.user-index-info {
+  width: 930px;
+  vertical-align: top;
+  height: 150px;
+  margin-left: 165px;
 }
 
 .BeforeScroll
