--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills">
-          <li><%= link_to "Bakers", users_path %></li>
+          <li><%= link_to "Home Cooks", users_path %></li>
           <li><%= link_to "About", about_path %></li>
           <li><%= link_to "Contact", new_contact_path %></li>
         </ul>
