fixed styling of CSS

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,6 +134,10 @@ body {
    color: #000;
  }
 
+ .navbar-fixed-top {
+   box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+ }
+
  #copyright p {
    float: right;
    color: #000;
