--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -76,7 +76,7 @@
   margin-bottom: 15px;
   background-position: center;
   height: 100px;
-  background-image: url('icon2.png');
+  background-image: image-url('icon2.png');
   background-repeat: no-repeat;
 }
 
@@ -84,7 +84,7 @@
   margin-bottom: 15px;
   background-position: center;
   height: 100px;
-  background-image: url('icon3.png');
+  background-image: image-url('icon3.png');
   background-repeat: no-repeat;
 }
 
@@ -92,7 +92,7 @@
   margin-bottom: 20px;
   background-position: center;
   height: 133px;
-  background-image: url('landscape.png');
+  background-image: image-url('landscape.png');
   background-repeat: no-repeat;
 }
 
