--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -47,7 +47,7 @@
 }
 
 .shop-image {
-  background-image: url('sushi-splash3.jpg');
+  background-image: image-url('sushi-splash3.jpg');
   background-color: #7E2553;
   background-size: cover;
   background-repeat: no-repeat;
@@ -103,7 +103,7 @@
 }
 
 #login {
-  background-image: url('signup1.jpg');
+  background-image: image-url('signup1.jpg');
   background-size: cover;
   margin: auto;
 }
