--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -68,7 +68,7 @@
   margin-bottom: 15px;
   background-position: center;
   height: 100px;
-  background-image: url('icon1.png');
+  background-image: image-url('icon1.png');
   background-repeat: no-repeat;
 }
 
@@ -109,7 +109,7 @@
 }
 
 #header-pic {
-  background-image: url('cupcakes2.jpg');
+  background-image: image-url('cupcakes2.jpg');
   background-size: cover;
   height: 770px;
 }
