--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
 <div class="footer">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#" style="padding: 25px 0px;"><%= image_tag "../assets/neighborfood-logo.png", class: "logo"%></a>
+            <a class="navbar-brand" href="#" style="padding: 25px 0px;"><%= image_tag "neighborfood-logo.png", class: "logo"%></a>
           </div>
             <div id="copyright">
               <p>© 2016 neighborFood</p>
