--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,70 +1,60 @@
-<h1>sign up</h1>
-  <%= @user.errors.full_messages.join(", ") %>
-  <%= form_for @user do |f| %>
-<div>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :email %>
-  <%= f.email_field :email, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :password %>
-  <%= f.password_field :password, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :apartment_number %>
-  <%= f.text_field :apartment_number, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :street_number %>
-  <%= f.text_field :street_number, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :street %>
-  <%= f.text_field :street, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :city %>
-  <%= f.text_field :city, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :state %>
-  <%= f.text_field :state, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :country %>
-  <%= f.text_field :country, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :telephone %>
-  <%= f.text_field :telephone, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :avatar %>
-  <%= f.file_field :avatar, class:"form-control" %>
-</div>
-<hr />
-<p>
-  Once you have a shop name, it will be available to show on the listing page.
-</p>
-<div>
-  <%= f.label :shop_name %>
-  <%= f.text_field :shop_name, class:"form-control" %>
-</div>
-<div>
-  <%= f.label :description %>
-  <%= f.text_field :description, class:"form-control" %>
-</div>
+<div class="container">
+  <div class="user-margin-div">
+    <h1>Sign up</h1>
+      <%= @user.errors.full_messages.join(", ") %>
+      <%= form_for @user do |f| %>
+    <div>
+      <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :last_name, placeholder: "Last name", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.email_field :email, placeholder: "Email", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.password_field :password, placeholder: "Password",class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.password_field :password_confirmation, placeholder: "Confirm password", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :apartment_number, placeholder: "Apartment number", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :street_number, placeholder: "Street number",class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :street, placeholder: "Street", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :city, placeholder: "City", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :state, placeholder: "State", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :country, placeholder: "Country", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :telephone, placeholder: "Telephone", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar %>
+    </div>
+    <hr />
+    <p>
+      Once you have a shop name, it will be available to show on the listing page.
+    </p>
+    <div>
+      <%= f.text_field :shop_name, placeholder: "Shop name", class: "login-input-field login-input-form" %>
+    </div>
+    <div>
+      <%= f.text_field :description, placeholder: "Description", class: "login-input-field login-input-form" %>
+    </div>
 
-<%= f.submit "Submit", class: "btn btn-primary" %>
-<% end %>
+    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
