--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
+        <a class="navbar-brand" style="margin-top: 15px" href="/"><%= image_tag "neighborfood-logo.png", class: "logo" %></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills">
