--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -31,7 +31,7 @@
           <span class="fa fa-truck icon-space"></span>Deliver/Pick Up
         </div>
         <div style="margin-top: 20px;">
-          <button type="button" class="buy-btn" data-toggle="modal" data-target="#myModal">
+          <button type="button" class="btn-primary buy-btn" data-toggle="modal" data-target="#myModal">
           view menu
           </button>
         </div>
