--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,7 +36,7 @@
         <div class="food-info">
           <h4 style="display: inline;"><%= m.food_name %></h4>
           <%#= link_to 'Add to cart', add_cart_path({id: m.id}), method: :patch, class: 'buy-btn inline-btn' %>
-          <%= link_to 'Add to cart', user_path(@user), class: 'buy-btn inline-btn' %>
+          <%= link_to 'Add to cart', user_path(@user), class: 'btn-primary buy-btn inline-btn' %>
           <p style="margin-top:10px;">$<%= m.price %><p>
           <p style="font-style: italic"><%= m.description %></p>
         </div>
