--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -34,6 +34,17 @@
   margin: 10px;
   padding: 0;
   overflow: hidden;
+  color: #444444;
+}
+
+.feature-box h4:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+.feature-box a:hover {
+  color: #000;
+  text-decoration: none;
 }
 
 .add-margin-to-feature-food {
@@ -96,9 +107,24 @@
   border-radius: 200px;
 }
 
+.fcook{
+  text-decoration: none;
+}
+
 .feature-cooks {
   margin-top: 30px;
   margin-bottom: 20px;
+  text-decoration: none;
+}
+
+.fcook h4:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+.fcook a:hover {
+  color: #000;
+  text-decoration: none;
 }
 
 #header-pic {
