--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,7 +57,7 @@
 
 <div class="container add-padding-to-feature">
   <h1 align="center" class="add-margin">Meet the new members of NeighborFood</h1>
-  <div class="row">
+  <div class="row fcook">
     <% @user[0...4].each do |user| %>
     <div class="col-sm-3">
         <%= link_to user_path(user) do %>
