--- a/app/views/users/_add_menu_items.html.erb
+++ b/app/views/users/_add_menu_items.html.erb
@@ -1,25 +1,25 @@
-<%= form_for [@user, @menu_items], remote: true, authenticity_token: true do |menu| %>
-<div class="form-group">
-  <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
-  <div class="form-group">
-    <label for="food_name" class="col-sm-2 control-label">Food name</label>
-    <div class="col-sm-10">
-      <%= menu.text_field :food_name, class: "form-control" %>
-    </div>
+<form class="form-inline">
+  <%= form_for [@user, @menu_items], remote: true, authenticity_token: true do |menu| %>
+<div>
+  <div class="form-group form-margins2">
+    <%= menu.text_field :food_name, placeholder: "Food name", class: "login-input-field login-input-form"%>
   </div>
-  <div class="form-group">
-    <label for="price" class="col-sm-2 control-label">Price</label>
-    <div class="input-group">
-      <div class="input-group-addon">$</div>
-      <%= menu.text_field :price, class: "form-control" %>
+  <div class="form-group form-margins2">
+    <%= menu.text_field :price, placeholder: "Price", class: "login-input-field login-input-form" %>
       <!-- <input type="text" class="form-control" id="exampleInputAmount" placeholder="Amount"> -->
-      <div class="input-group-addon">.00</div>
-    </div>
-
   </div>
-<%= menu.text_area :description, class: "form-control" %>
-<%= menu.file_field :image %>
-</div>
-</div>
-<%= menu.submit class: "btn btn-primary" %>
+</form>
+
+<form class="form-inline">
+  <div class="form-group form-margins1">
+    <%= menu.text_area :description, placeholder: "Food description", class: "login-input-field login-input-form" %>
+  </div>
+</form>
+  <div class="form-group form-margins1">
+    <%= menu.file_field :image %>
+  </div>
+  <div style="margin-top: 25px; margin-left: 10px;">
+    <%= menu.submit class: "btn-primary buy-btn" %>
+  </div>
   <% end %>
+</div>
