--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container user-margin-div">
-<ul class="nav nav-tabs" role="tablist">
+<ul class="ela-tabs nav nav-tabs" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" data-toggle="tab" href="#profile" role="tab">Profile</a>
   </li>
@@ -11,90 +11,84 @@
 <div class="tab-content">
   <div class="tab-pane fade in active" id="profile" role="tabpanel">
 
-    <h1>Your Profile</h1>
+    <h4 style="margin-top: 30px; margin-bottom: 20px;">Personal Information</h4>
+    <form class="form-inline">
       <%= @user.errors.full_messages.join(", ") %>
       <%= form_for @user do |f| %>
-    <div>
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name, class:"form-control" %>
+      <div class="form-group form-margins2">
+        <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins2">
+        <%= f.text_field :last_name, placeholder: "Last name", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins2">
+        <%= f.email_field :email, placeholder: "Email", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins2">
+        <%= f.password_field :password, placeholder: "Password",class: "login-input-field login-input-form" %>
+      </div>
+    </form>
+    <div class="form-margins1">
+      <%= f.text_field :telephone, placeholder: "Telephone", class: "login-input-field login-input-form" %>
     </div>
-    <div>
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :email %>
-      <%= f.email_field :email, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :password %>
-      <%= f.password_field :password, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :apartment_number %>
-      <%= f.text_field :apartment_number, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :street_number %>
-      <%= f.text_field :street_number, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :street %>
-      <%= f.text_field :street, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :city %>
-      <%= f.text_field :city, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :state %>
-      <%= f.text_field :state, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :country %>
-      <%= f.text_field :country, class:"form-control" %>
-    </div>
-    <div>
-      <%= f.label :telephone %>
-      <%= f.text_field :telephone, class:"form-control" %>
-    </div>
-    <div>
+    <div style="margin-bottom: 40px;" class="form-group form-margins1" >
       <%= f.label :avatar %>
-      <%= f.file_field :avatar, class:"form-control" %>
+      <%= f.file_field :avatar %>
     </div>
-    <hr />
-    <p>
-      Once you have a shop name, it will be available to show on the listing page.
-    </p>
-    <div>
-      <%= f.label :shop_name %>
-      <%= f.text_field :shop_name, class:"form-control" %>
+
+    <h4 style="margin-top: 30px; margin-bottom: 20px;">Address</h4>
+    <form class="form-inline">
+      <div class="form-group form-margins3">
+        <%= f.text_field :apartment_number, placeholder: "Apartment number", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins3">
+        <%= f.text_field :street_number, placeholder: "Street number",class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins3">
+        <%= f.text_field :street, placeholder: "Street", class: "login-input-field login-input-form" %>
+      </div>
+    </form>
+
+    <form class="form-inline">
+      <div class="form-group form-margins3">
+        <%= f.text_field :city, placeholder: "City", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins3">
+        <%= f.text_field :state, placeholder: "State", class: "login-input-field login-input-form" %>
+      </div>
+      <div class="form-group form-margins3">
+        <%= f.text_field :country, placeholder: "Country", class: "login-input-field login-input-form" %>
+      </div>
+    </form>
+
+    <h4 style="margin-top: 30px; margin-bottom: 20px;">Shop Information</h4>
+
+    <div class="form-group form-margins1">
+      <%= f.text_field :shop_name, placeholder: "Shop name", class: "login-input-field login-input-form" %>
     </div>
-    <div>
-      <%= f.label :description %>
-      <%= f.text_field :description, class:"form-control" %>
+    <div class="form-group form-margins1">
+      <%= f.text_field :description, placeholder: "Description", class: "login-input-field login-input-form" %>
     </div>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <div style="margin: 10px;">
+      <%= f.submit "Edit account", class: "btn-primary buy-btn" %>
+    </div>
     <% end %>
-  </div>
-  <div class="row ">
-    <div id="menu_items">
-      <% @user.menu_items.each do |items| %>
-      <%= render "/menu_items/show_items", items: items %>
-      <% end %>
-    </div>
   </div>
 
   <div class="tab-pane fade in" id="add_menu_item" role="tabpanel">
-    <h2>Add Menu Item</h2>
+    <h4 style="margin-top: 30px; margin-bottom: 20px;">Add Menu Item</h4>
     <div class="row reports-in">
         <div class="continer">
           <%= render "add_menu_items"%>
         </div>
+    </div>
+
+    <div class="row ">
+      <div id="menu_items">
+        <% @user.menu_items.each do |items| %>
+        <%= render "/menu_items/show_items", items: items %>
+        <% end %>
+      </div>
     </div>
 
   </div>
