--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -59,7 +59,7 @@
     <div class="form-group form-margins1">
       <%= f.text_field :description, placeholder: "Description", class: "login-input-field login-input-form" %>
     </div>
-    <div style="margin: 10px;">
+    <div>
       <%= f.submit "Create account", class: "btn-primary buy-btn" %>
     </div>
     <% end %>
